--- a/src/components/Cards/cards.scss
+++ b/src/components/Cards/cards.scss
@@ -14,6 +14,14 @@
     flex-direction: column;
     align-self: center;
   }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    width: 100%;
+    height: 50%;
+
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+  }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     width: 90%;
     height: 40%;
@@ -30,6 +38,9 @@
     padding: 35px 40px;
     @media screen and (min-width: 768px) and (max-width: 1023px) {
       padding: 15%;
+    }
+    @media screen and (min-width: 481px) and (max-width: 768px) {
+      padding: 10%;
     }
   }
   .card__logo {
@@ -60,7 +71,6 @@
     margin-bottom: 20px;
   }
   .card__text {
-    //styleName: paragraph;
     font-family: "Montserrat", sans-serif;
     font-size: 14px;
     font-style: normal;
