--- a/src/components/Contacts/contacts.scss
+++ b/src/components/Contacts/contacts.scss
@@ -14,6 +14,18 @@
     padding: 20px;
     margin: 0 auto;
   }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    width: 100vw;
+    height: 100vh;
+    padding: 20px;
+    margin: 0 auto;
+  }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    width: 100%;
+    height: 100vh;
+    padding-top: 20px;
+    margin: 0 auto;
+  }
 }
 
 .content__contacts {
@@ -27,6 +39,16 @@
   @media screen and (min-width: 768px) and (max-width: 1023px) {
     width: 80%;
     margin-top: 50px;
+  }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    width: 80%;
+    padding-left: 15px;
+  }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    width: 90%;
+    height: 100vh;
+    margin: 0 auto;
+    padding-left: 15px;
   }
 }
 .contacts__title {
@@ -42,6 +64,19 @@
   @media screen and (min-width: 768px) and (max-width: 1023px) {
     font-size: 50px;
     text-align: left;
+    line-height: normal;
+  }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    font-size: 50px;
+    text-align: left;
+    line-height: normal;
+  }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    width: 90%;
+    height: 10%;
+    font-size: 30px;
+    text-align: left;
+    margin: 0 auto;
     line-height: normal;
   }
 }
