--- a/src/components/Form/form.scss
+++ b/src/components/Form/form.scss
@@ -8,7 +8,6 @@
   font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: bold;
-
   color: $anthracite;
 }
 .input__form {
@@ -47,4 +46,10 @@
   letter-spacing: 0.2px;
   color: $white;
   cursor: pointer;
+}
+
+.form__btn:disabled {
+  background-color: $gray;
+  border: 1px solid $gray;
+  cursor: none;
 }
