--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -17,6 +17,10 @@
     align-items: center;
     width: 90%;
     top: 18px;
+    @media screen and (min-width: 481px) and (max-width: 768px) {
+      width: 100%;
+    }
+
     @media screen and (min-width: 320px) and (max-width: 480px) {
       width: 100%;
     }
@@ -28,12 +32,24 @@
       flex-direction: row;
       justify-items: flex-end;
     }
+    @media screen and (min-width: 481px) and (max-width: 768px) {
+      display: flex;
+      flex-direction: row;
+      justify-items: flex-end;
+    }
+    @media screen and (min-width: 320px) and (max-width: 480px) {
+      display: flex;
+      padding-right: 1%;
+    }
   }
   .header__logo {
     margin-top: 23px;
     margin-left: 182px;
     margin-bottom: 22px;
     @media screen and (min-width: 768px) and (max-width: 1023px) {
+      margin-left: 5%;
+    }
+    @media screen and (min-width: 481px) and (max-width: 768px) {
       margin-left: 5%;
     }
     @media screen and (min-width: 320px) and (max-width: 480px) {
