--- a/src/components/HeaderUser/headerUser.scss
+++ b/src/components/HeaderUser/headerUser.scss
@@ -18,6 +18,9 @@
     align-items: center;
     width: 90%;
     top: 18px;
+    @media screen and (min-width: 481px) and (max-width: 768px) {
+      width: 100%;
+    }
     @media screen and (min-width: 320px) and (max-width: 480px) {
       width: 100%;
     }
@@ -25,6 +28,11 @@
   .header__btnUser {
     padding-right: 24px;
     @media screen and (min-width: 768px) and (max-width: 1023px) {
+      display: flex;
+      flex-direction: row;
+      justify-items: flex-end;
+    }
+    @media screen and (min-width: 481px) and (max-width: 768px) {
       display: flex;
       flex-direction: row;
       justify-items: flex-end;
@@ -39,6 +47,9 @@
     margin-left: 190px;
     margin-bottom: 22px;
     @media screen and (min-width: 768px) and (max-width: 1023px) {
+      margin-left: 5%;
+    }
+    @media screen and (min-width: 481px) and (max-width: 768px) {
       margin-left: 5%;
     }
     @media screen and (min-width: 320px) and (max-width: 480px) {
