--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -6,6 +6,12 @@
     align-items: center;
     justify-content: center;
   }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
   @media screen and (min-width: 320px) and (max-width: 480px) {
     flex-direction: column;
     align-items: center;
@@ -26,6 +32,13 @@
     padding: 20px;
     margin: 0 auto;
   }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    width: 100vw;
+    height: 100vh;
+    padding: 20px;
+    margin: 0 auto;
+  }
+
   @media screen and (min-width: 320px) and (max-width: 480px) {
     width: 100%;
     height: 100vh;
@@ -37,6 +50,10 @@
     height: 280px;
     margin-top: 95px;
     @media screen and (min-width: 768px) and (max-width: 1023px) {
+      width: 100%;
+      margin-top: 50px;
+    }
+    @media screen and (min-width: 481px) and (max-width: 768px) {
       width: 100%;
       margin-top: 50px;
     }
@@ -60,12 +77,18 @@
     letter-spacing: 0.2px;
     color: $anthracite;
     flex: none;
-    // order: 0;
-    // flex-grow: 0;
     margin: 35px 0px;
 
     @media screen and (min-width: 768px) and (max-width: 1023px) {
       font-size: 50px;
+      text-align: center;
+      margin: 0 auto;
+      line-height: normal;
+    }
+    @media screen and (min-width: 481px) and (max-width: 768px) {
+      width: 100%;
+      height: 120px;
+      font-size: 40px;
       text-align: center;
       margin: 0 auto;
       line-height: normal;
@@ -84,6 +107,11 @@
   display: flex;
   gap: 10px;
   @media screen and (min-width: 768px) and (max-width: 1023px) {
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+  }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
     flex-direction: row;
     justify-content: center;
     gap: 20px;
@@ -111,6 +139,15 @@
     padding: 10%;
     margin: 0 auto;
   }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    height: 100vh;
+    padding: 10%;
+    margin: 0 auto;
+  }
+
   @media screen and (min-width: 320px) and (max-width: 480px) {
     display: flex;
     flex-direction: column;
