--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -23,6 +23,9 @@
   width: 30vw;
   transform: scale(0.5);
   transition: 0.4s all;
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    width: 70vw;
+  }
 }
 .modal__content.active {
   transform: scale(1);
