--- a/src/components/User/index.scss
+++ b/src/components/User/index.scss
@@ -14,6 +14,18 @@
     padding: 20px;
     margin: 0 auto;
   }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    width: 100vw;
+    height: 100vh;
+    padding: 10px;
+    margin: 0 auto;
+  }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    width: 100%;
+    height: 100vh;
+    padding-top: 20px;
+    margin: 0 auto;
+  }
 
   .content__user {
     height: 158px;
@@ -26,6 +38,17 @@
     @media screen and (min-width: 768px) and (max-width: 1023px) {
       width: 80%;
       margin-top: 50px;
+      @media screen and (min-width: 481px) and (max-width: 768px) {
+        width: 100%;
+        padding-left: 15px;
+        margin-top: 50px;
+      }
+    }
+    @media screen and (min-width: 320px) and (max-width: 480px) {
+      width: 90%;
+      height: 100vh;
+      margin: 0 auto;
+      padding-left: 15px;
     }
   }
 }
@@ -41,7 +64,20 @@
   @media screen and (min-width: 768px) and (max-width: 1023px) {
     font-size: 50px;
     text-align: left;
-
+    line-height: normal;
+  }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    font-size: 40px;
+    text-align: left;
+    line-height: normal;
+    padding-bottom: 20px;
+  }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    width: 90%;
+    height: 10%;
+    font-size: 30px;
+    text-align: left;
+    margin: 0 auto;
     line-height: normal;
   }
 }
@@ -57,6 +93,17 @@
   gap: 10px;
   @media screen and (min-width: 768px) and (max-width: 1023px) {
     flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+  }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+  }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    flex-direction: row;
+    width: 100%;
     justify-content: center;
     gap: 20px;
   }
